syntax = "proto3";

package arkd.v1;

import "google/api/annotations.proto";

// TODO: Edit this proto to something more meaningful for your application.
service Service {
	rpc GetVersion(GetVersionRequest) returns (GetVersionResponse) {
		option (google.api.http) = {
      post: "/v1/hello"
			body: "*"
    };
	}
}

message GetVersionRequest {
	string name = 1;
}
message GetVersionResponse {
	string message = 1;
}
	