syntax = "proto3";

package ark.v1;

import "google/api/annotations.proto";

service ArkService {
  rpc RegisterPayment(RegisterPaymentRequest) returns (RegisterPaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment/register"
      body: "*"
    };
  };
  rpc ClaimPayment(ClaimPaymentRequest) returns (ClaimPaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment/claim"
      body: "*"
    };
  };
  rpc FinalizePayment(FinalizePaymentRequest) returns (FinalizePaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payment/finalize"
      body: "*"
    };
  };
  // TODO BTC: signTree rpc 
  rpc GetRound(GetRoundRequest) returns (GetRoundResponse) {
    option (google.api.http) = {
      get: "/v1/round/{txid}"
    };
  };
  rpc GetEventStream(GetEventStreamRequest) returns (stream GetEventStreamResponse) {
    option (google.api.http) = {
      get: "/v1/events"
    };
  };
  rpc Ping(PingRequest) returns (PingResponse) {
    option (google.api.http) = {
      get: "/v1/ping/{payment_id}"
    };
  };
  rpc ListVtxos(ListVtxosRequest) returns (ListVtxosResponse) {
    option (google.api.http) = {
      get: "/v1/vtxos/{address}"
    };
  }
  rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) {
    option (google.api.http) = {
      get: "/v1/info"
    };
  }
  rpc Onboard(OnboardRequest) returns (OnboardResponse) {
    option (google.api.http) = {
      post: "/v1/onboard"
      body: "*"
    };
  }
  rpc TrustedOnboarding(TrustedOnboardingRequest) returns (TrustedOnboardingResponse) {
    option (google.api.http) = {
      post: "/v1/onboard/address"
      body: "*"
    };
  }
}

message RegisterPaymentRequest {
  repeated Input inputs = 1;
}
message RegisterPaymentResponse {
  // Mocks wabisabi's credentials.
  string id = 1;
}

message ClaimPaymentRequest {
  // Mocks wabisabi's credentials.
  string id = 1;
  // List of receivers for a registered payment. 
  repeated Output outputs = 2;
}
message ClaimPaymentResponse {}

message FinalizePaymentRequest {
  // Forfeit txs signed by the user. 
  repeated string signed_forfeit_txs = 1;
}
message FinalizePaymentResponse {}

message GetRoundRequest {
  string txid = 1;
}
message GetRoundResponse {
  Round round = 1;
}

message GetEventStreamRequest {}
message GetEventStreamResponse {
  oneof event {
    // TODO: BTC add "signTree" event
    RoundFinalizationEvent round_finalization = 1;
    RoundFinalizedEvent round_finalized = 2;
    RoundFailed round_failed = 3;
  }
}

message PingRequest {
  string payment_id = 1;
}
message PingResponse {
  // TODO: improve this response (returns oneof the round event)
  repeated string forfeit_txs = 1;
}

message ListVtxosRequest {
  string address = 1;
}
message ListVtxosResponse {
  repeated Vtxo spendable_vtxos = 1;
  repeated Vtxo spent_vtxos = 2;
}

message GetInfoRequest {}
message GetInfoResponse {
  string pubkey = 1;
  int64 round_lifetime = 2;
  int64 unilateral_exit_delay = 3;
  int64 round_interval = 4;
  string network = 5;
  int64 min_relay_fee = 6;
}

message OnboardRequest {
  string boarding_tx = 1;
  Tree congestion_tree = 2;
  string user_pubkey = 3;
}
message OnboardResponse {
}

message TrustedOnboardingRequest {
  string user_pubkey = 1;
}

message TrustedOnboardingResponse {
  string address = 1;
}

// EVENT TYPES

message RoundFinalizationEvent {
  string id = 1;
  string pool_tx = 2;
  repeated string forfeit_txs = 3;
  Tree congestion_tree = 4;
  repeated string connectors = 5;
}

message RoundFinalizedEvent {
  string id = 1;
  string pool_txid = 2;
}

message RoundFailed {
  string id = 1;
  string reason = 2;
}

// TYPES

message Round {
  string id = 1;
  int64 start = 2;
  int64 end = 3;
  string pool_tx = 4;
  Tree congestion_tree = 5;
  repeated string forfeit_txs = 6;
  repeated string connectors = 7;
}

message Input {
  string txid = 1;
  uint32 vout = 2;
}

message Output {
  // Either the offchain or onchain address.
  string address = 1;
  // Amount to send in satoshis.
  uint64 amount = 2;
}

message Tree {
  repeated TreeLevel levels = 1;
}

message TreeLevel {
  repeated Node nodes = 1;
}

message Node {
  string txid = 1;
  string tx = 2;
  string parent_txid = 3;
}

message Vtxo {
  Input outpoint = 1;
  Output receiver = 2;
  bool spent = 3;
  string pool_txid = 4;
  string spent_by = 5;
  int64 expire_at = 6;
  bool swept = 7;
}